--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mis Antojos Pizzeria</title>
 	<!--Google fonts-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">     
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">     
+	<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css"><!-- Link a css -->
 </head>
 
 <body background="./imagenes/fondo1.jpg">
   <header class="header"><!-- Encabezado del sitio -->
 		
-		<section class="header__logo">
+		<!-- <section class="header__logo"> NavBar CSS
 			<a class="header__logo__imagen" href="#">
 				<img src="./imagenes/encabezado.jpg" alt="Logo del sitio">
 			</a>
-		</section>
-
+		</section> -->
+	<nav>
+		<div class="container"> <!--NavBar Boostrap-->
+			<a class="navbar-brand" href="#">
+			  <img src="./imagenes/encabezado.jpg" alt="" width="100"  >
+			</a>
+		  </div>
+	</nav>
+	
 		<section class="header__menu">
 			<nav><!--Barra de navegación (Unorder list)-->
 				<ul class="header__menu__lista">
@@ -31,6 +39,9 @@
 					<li class="header__menu__lista__item"><a href="./paginas/contacto.html">Contacto</a></li>
 				</ul>
 			</nav>
+
+			
+
 		</section>
 	</header>
 
@@ -39,7 +50,29 @@
 		<section class="main__comidas">
 			<h2>NUESTRA HISTORIA</h2>
 				<div class="flex_container">
-					<div><img id="imagen_pizza" src="./imagenes/pizza1.jpeg" alt="Imagen de la Pizza"></div>
+					<!-- <div><img id="imagen_pizza" src="./imagenes/pizza1.jpeg" alt="Imagen de la Pizza"></div> -->
+					
+					<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel"> <!--Carrusel de fotos-->
+						<div class="carousel-inner">
+						  <div class="carousel-item active" data-bs-interval="4000">
+							<img src="./imagenes/heladomenu1.png" class="d-block w-100" alt="Helado">
+						  </div>
+						  <div class="carousel-item" data-bs-interval="4000">
+							<img src="./imagenes/ensaladamenu1.png"  class="d-block w-100" alt="Ensalada de frutas">
+						  </div>
+						  <div class="carousel-item" data-bs-interval="4000">
+							<img src="./imagenes/pizzamenu1.png" class="d-block w-100" alt=".Pizza">
+						  </div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						  <span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+						  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						  <span class="visually-hidden">Next</span>
+						</button>
+					  </div>
 					<div class="flex_container_texto">Somos un lugar dedicado a brindar  experiencias   a niños, jóvenes y adultos a través de nuestros productos.
 						Estamos desde el año 2010 ofreciendo los mejores helados, pizzas y ensaladas de frutas de toda la región.<br>
 						<br><p>Te invitamos a que vengas a nuestro local o realices tu pedido, ya que ofrecemos servicio de delivery-pickUp.</p>
@@ -47,6 +80,7 @@
 					</div>		
 				</div>
 		</section>
+
 	</main>
 
 
@@ -57,5 +91,8 @@
 			<li class="footer__lista__item"><a href="https://www.youtube.com" target="_blank"><img src="./imagenes/youtube.png"></a></li>
 		</ul>
 	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
