--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Antojos Pizzeria</title>
     <!--Google fonts-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -15,11 +16,18 @@
 <body background="../imagenes/fondo1.jpg">
     <header class="header"><!-- Encabezado del sitio -->
           
-          <section class="header__logo">
+          <!-- <section class="header__logo">
               <a class="header__logo__imagen" href="#">
                   <img src="../imagenes/encabezado.jpg" alt="Logo del sitio">
               </a>
-          </section>
+          </section> -->
+          <nav>
+            <div class="container"> <!--NavBar Boostrap-->
+                <a class="navbar-brand" href="#">
+                  <img src="../imagenes/encabezado.jpg" alt="" width="100"  >
+                </a>
+              </div>
+        </nav>
   
           <section class="header__menu">
               <nav><!--Barra de navegación (Unorder list)-->
@@ -52,6 +60,9 @@
             </div>
             <div class="grilla__item item4 wide">
                 <img src="../imagenes/ensaladamenu1.png" alt="Ensalada sin helado">
+            </div>
+            <div class="grilla__item item5 wide">
+                <img src="../imagenes/ensaladamenu2.png" alt="Ensalada con helado">
             </div>
             <div class="grilla__item item5 wide">
                 <img src="../imagenes/ensaladamenu2.png" alt="Ensalada con helado">
