--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,17 +9,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">     
+
   <link rel="stylesheet" href="../style.css"><!-- Link a css -->
 </head>
 
 <body background="../imagenes/fondo1.jpg">
     <header class="header"><!-- Encabezado del sitio -->
           
-          <section class="header__logo">
+          <!-- <section class="header__logo"> NavBar CSS
               <a class="header__logo__imagen" href="#">
                   <img src="../imagenes/encabezado.jpg" alt="Logo del sitio">
               </a>
-          </section>
+          </section> -->
+        <nav>
+            <div class="container"> <!--NavBar Boostrap-->
+                <a class="navbar-brand" href="#">
+                  <img src="../imagenes/encabezado.jpg" alt="" width="100"  >
+                </a>
+              </div>
+        </nav>  
   
           <section class="header__menu">
               <nav><!--Barra de navegación (Unorder list)-->
