Agregadas las cards en el menu con boostrap para completar la entrega de desafio con 2 paginas que cuenten con boostrap

--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -46,7 +46,7 @@
 		
 			<h2>NUESTRO MENÚ</h2>
         <section class="grilla"> <!--Grilla para el menú-->
-            <div class="grilla__item item1 wide">
+            <!-- <div class="grilla__item item1 wide">
                 <img src="../imagenes/pizzamenu1.png" alt="Pizza Peperonni">
             </div>
             <div class="grilla__item item2 wide">
@@ -66,7 +66,46 @@
             </div>
             <div class="grilla__item item5 wide">
                 <img src="../imagenes/ensaladamenu2.png" alt="Ensalada con helado">
-            </div>
+            </div> -->
+            <div class="row row-cols-1 row-cols-md-2 g-4 "> <!--Menu con Boostrap-->
+                <div class="col ">
+                  <div class="card bg-warning">
+                    <img src="../imagenes/pizzamenu1.png" class="card-img-top " alt="Pizza Peperoni">
+                    <div class="card-body ">
+                      <h5 class="card-title">Pizza Peperoni</h5>
+                      <p class="card-text">Pepperoni bañada en nuestra salsa extra queso</p>
+                    </div>
+                  </div>
+                </div>
+                
+                <div class="col">
+                  <div class="card bg-warning">
+                    <img src="../imagenes/pizzamenu2.png" class="card-img-top" alt="Pizza Hawaiana">
+                    <div class="card-body">
+                      <h5 class="card-title">Pizza Hawaiana</h5>
+                      <p class="card-text">Piña, queso y masa delgada</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card bg-warning">
+                    <img src="../imagenes/heladomenu1.png" class="card-img-top" alt="Super cono">
+                    <div class="card-body">
+                      <h5 class="card-title">Cono 1 sabor</h5>
+                      <p class="card-text">Cono con 1 bola de helado a tu elección</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card bg-warning">
+                    <img src="../imagenes/ensaladamenu1.png" class="card-img-top" alt="Ensalada de frutas">
+                    <div class="card-body">
+                      <h5 class="card-title">Ensalada de Frutas</h5>
+                      <p class="card-text">Fruta, crema de la casa, barquillo y sin helado</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
 	</main> 
 
