Agregue una grilla en la pagina delivery con imagen, descripcion y precio

--- a/paginas/Delivery-retiro.html
+++ b/paginas/Delivery-retiro.html
@@ -48,11 +48,52 @@
 		<section class="main__comidas">
 			<h2>DELIVERY - PICKUP</h2>
 				<div class="flex_container">
-					<div><img id="imagen_pizza2" src="../imagenes/pizza2.jpeg" alt="Imagen del helado"></div>
-					<div class="flex_container_texto">Estamos contratando nuestros nuevos deliveries-members.<br>
-						<br><p>Si conoces a alguien que quiera ser parte de este gran equipo, no dudes en avisarle que estamos contratando.</p>
-						<p class="p">¡Estamos contratando!</p>
-					</div>	
+					<div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="../imagenes/pizza1.jpeg" class="card-img-top" alt="Pizza Peperonni">
+                <div class="card-body">
+                  <h1 class="card-title">Pizza Peperonni</h1>
+                  <p class="card-text">Pepperoni bañada en nuestra salsa extra queso.</p>
+                  <p class="card-text">Precio slide $3.500</p>
+
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="../imagenes/ensaladamenu2.png" class="card-img-top" alt="Ensalada de frutas">
+                <div class="card-body">
+                  <h1 class="card-title">Ensalada de Frutas con helado</h1>
+                  <p class="card-text">Frutas, queso, crema de la casa acompañada de 2 helados</p>
+                  <p class="card-text">Precio slide $8.000</p>
+
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="../imagenes/pizzamenu2.png" class="card-img-top" alt="Pizza Atun">
+                <div class="card-body">
+                  <h5 class="card-title">Pizza Atún</h5>
+                  <p class="card-text">pasta de tomate, oregano, queso y Atún</p>
+                  <p class="card-text">Precio slide $4.000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="../imagenes/helado3.png" class="card-img-top" alt="Cono helado">
+                <div class="card-body">
+                  <h1 class="card-title">Cono 1 bola</h1>
+                  <p class="card-text">Cono con una bola del sabor de tu preferencia</p>
+                  <p class="card-text">Precio $2.500</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+						
 				</div>
 		</section>
 	</main>       
