Ajustes a la pagina menu, agregar grillas a la paguna delivery con toda la info

--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -67,42 +67,57 @@
             <div class="grilla__item item5 wide">
                 <img src="../imagenes/ensaladamenu2.png" alt="Ensalada con helado">
             </div> -->
-            <div class="row row-cols-1 row-cols-md-2 g-4 "> <!--Menu con Boostrap-->
-                <div class="col ">
-                  <div class="card bg-warning">
-                    <img src="../imagenes/pizzamenu1.png" class="card-img-top " alt="Pizza Peperoni">
-                    <div class="card-body ">
-                      <h5 class="card-title">Pizza Peperoni</h5>
-                      <p class="card-text">Pepperoni bañada en nuestra salsa extra queso</p>
-                    </div>
+
+              <div class="card-group">
+                <div class="card bg-warning">
+                  <img src="../imagenes/pizzamenu1.png" class="card-img-top" alt="Pizza Peperonni">
+                  <div class="card-body bg-warning">
+                    <h4 class="card-title">Pizza Pepperoni</h4>
+                    <p class="card-text">Pepperoni bañada en nuestra salsa extra queso.</p>
+                    <p class="card-text">Porción personal, mediana o familiar</p>
                   </div>
                 </div>
-                
-                <div class="col">
-                  <div class="card bg-warning">
-                    <img src="../imagenes/pizzamenu2.png" class="card-img-top" alt="Pizza Hawaiana">
-                    <div class="card-body">
-                      <h5 class="card-title">Pizza Hawaiana</h5>
-                      <p class="card-text">Piña, queso y masa delgada</p>
-                    </div>
+                <div class="card bg-warning">
+                  <img src="../imagenes/pizzamenu2.png" class="card-img-top" alt="Pizza Hawaiana">
+                  <div class="card-body bg-warning">
+                    <h5 class="card-title">Pizza Hawaiana</h5>
+                    <p class="card-text">Piña, mucho queso y pasta de tomate</p>
+                    <p class="card-text">Porción personal, mediana o familiar</p>
                   </div>
                 </div>
-                <div class="col">
-                  <div class="card bg-warning">
-                    <img src="../imagenes/heladomenu1.png" class="card-img-top" alt="Super cono">
-                    <div class="card-body">
-                      <h5 class="card-title">Cono 1 sabor</h5>
-                      <p class="card-text">Cono con 1 bola de helado a tu elección</p>
-                    </div>
+                <div class="card bg-warning">
+                  <img src="../imagenes/pizzamenu2.png" class="card-img-top" alt="Pizza Atun">
+                  <div class="card-body ">
+                    <h5 class="card-title">Pizza Atún</h5>
+                    <p class="card-text">pasta de tomate, oregano, queso y Atún</p>
+                    <p class="card-text">Porción personal, mediana o familiar</p>
                   </div>
                 </div>
-                <div class="col">
-                  <div class="card bg-warning">
-                    <img src="../imagenes/ensaladamenu1.png" class="card-img-top" alt="Ensalada de frutas">
-                    <div class="card-body">
-                      <h5 class="card-title">Ensalada de Frutas</h5>
-                      <p class="card-text">Fruta, crema de la casa, barquillo y sin helado</p>
-                    </div>
+              </div>
+              <br>
+              <div class="card-group">
+                <div class="card bg-warning">
+                  <img src="../imagenes/ensaladamenu1.png" class="card-img-top" alt="Ensalda de frutas">
+                  <div class="card-body bg-warning">
+                    <h5 class="card-title">Ensalada de Frutas (Sin helado)</h5>
+                    <p class="card-text">Frutas, crema chantilline y barquillo</p>
+                    <p class="card-text">Porción personal y grande</p>
+                  </div>
+                </div>
+                <div class="card bg-warning">
+                  <img src="../imagenes/ensaladamenu2.png" class="card-img-top" alt="Ensalda de frutas con helado">
+                  <div class="card-body bg-warning">
+                    <h5 class="card-title">Ensalada de frutas (Incluye helado)</h5>
+                    <p class="card-text">Frutas, queso, crema de la casa acompañada de 2 helados</p>
+                    <p class="card-text">Porción personal y grande</p>
+                  </div>
+                </div>
+                <div class="card bg-warning">
+                  <img src="../imagenes/heladobanana.png" class="card-img-top" alt="Helado Banana">
+                  <div class="card-body ">
+                    <h5 class="card-title">BananaSplit</h5>
+                    <p class="card-text">Banano, helado, fresas y topin que desees.</p>
+                    <p class="card-text">Porción personal y grande</p>
                   </div>
                 </div>
               </div>
