Agregue acordion a la pgina eventos, navbar a la pagina contacto y asi todas las paginas quedaron con boostrap aplicados

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav>
 		<div class="container"> <!--NavBar Boostrap-->
 			<a class="navbar-brand" href="#">
-			  <img src="./imagenes/encabezado.jpg" alt="" width="100"  >
+			  <img src="./imagenes/encabezado.jpg" alt="Encabezado" width="100"  >
 			</a>
 		  </div>
 	</nav>
