--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mis Antojos Pizzeria</title>
 	<!--Google fonts-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">     
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css"><!-- Link a css -->
 </head>
 
-<body >
-  <header class="header container-fluid"><!-- Encabezado del sitio -->
-		
+<body>
+	<header class="header container-fluid">
+		<!-- Encabezado del sitio -->
+
 		<!-- <section class="header__logo"> NavBar CSS
 			<a class="header__logo__imagen" href="#">
 				<img src="./imagenes/encabezado.jpg" alt="Logo del sitio">
@@ -24,16 +28,17 @@
 	</header>
 
 	<nav>
-		<div class="container"> <!--NavBar Boostrap-->
+		<div class="container">
+			<!--NavBar Boostrap-->
 			<a class="navbar-brand" href="#">
-			  <img src="./imagenes/encabezado.jpg" alt="Encabezado" width="100"  >
+				<img src="./imagenes/encabezado.jpg" alt="Encabezado" width="100">
 			</a>
-		  </div>
+		</div>
 	</nav>
-	
-		<section class="header__menu">
-			<!--Barra de navegación (Unorder list)-->
-			<!-- <nav>
+
+	<section class="header__menu">
+		<!--Barra de navegación (Unorder list)-->
+		<!-- <nav>
 				<ul class="header__menu__lista">
 					<li class="header__menu__lista__item"><a href="./index.html">Home</a></li>
 					<li class="header__menu__lista__item"><a href="./paginas/menu.html">Menú</a></li>
@@ -43,85 +48,130 @@
 				</ul>
 			</nav> -->
 
-			<nav class="header__menu__lista navbar navbar-expand-lg navbar-light ">
-				<div class="divheader__menu__lista container-fluid d-flex">
-				  
-				  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				  </button>
-				  <div class=" collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav header__menu__lista">
-					  <li class="nav-item header__menu__lista__item">
-						<a class="nav-link" aria-current="page" href="./index.html">Home</a>
-					  </li>
-					  <li class="nav-item header__menu__lista__item">
-						<a class="nav-link" href="./paginas/menu.html">Menú</a>
-					  </li>
-					  <li class="nav-item header__menu__lista__item">
-						<a class="nav-link" href="./paginas/Delivery-retiro.html">Delivery - PickUp</a>
-					  </li>
-					  <li class="nav-item header__menu__lista__item">
-						<a class="nav-link" href="./paginas/eventos.html">Eventos</a>
-					  </li>
-					  <li class="nav-item header__menu__lista__item">
-						<a class="nav-link" href="./paginas/contacto.html">Contacto</a>
-					  </li>
-					</ul>
-				  </div>
-				</div>
-			  </nav>
+		<nav class="header__menu__lista navbar navbar-expand-lg navbar-light ">
+			<div class="divheader__menu__lista container-fluid d-flex">
 
-		</section>
-	
-	<main class="main"><!-- Contenido del sitio -->
-		
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class=" collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav header__menu__lista">
+						<li class="nav-item header__menu__lista__item">
+							<a class="nav-link" aria-current="page" href="./index.html">Home</a>
+						</li>
+						<li class="nav-item header__menu__lista__item">
+							<a class="nav-link" href="./paginas/menu.html">Menú</a>
+						</li>
+						<li class="nav-item header__menu__lista__item">
+							<a class="nav-link" href="./paginas/Delivery-retiro.html">Delivery - PickUp</a>
+						</li>
+						<li class="nav-item header__menu__lista__item">
+							<a class="nav-link" href="./paginas/eventos.html">Eventos</a>
+						</li>
+						<li class="nav-item header__menu__lista__item">
+							<a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+	</section>
+
+	<main class="main">
+		<!-- Contenido del sitio -->
+
 		<section class="main__comidas">
 			<h2>NUESTRA HISTORIA</h2>
-				<div class="flex_container row-1">
-					<!-- <div><img id="imagen_pizza" src="./imagenes/pizza1.jpeg" alt="Imagen de la Pizza"></div> -->
-					
-					<div id="carouselExampleInterval" class="carousel slide col-6" data-bs-ride="carousel"> <!--Carrusel de fotos-->
-						<div class="carousel-inner">
-						  <div class="carousel-item active" data-bs-interval="4000">
+			<div class="flex_container mt-2 row-1">
+				<!-- <div><img id="imagen_pizza" src="./imagenes/pizza1.jpeg" alt="Imagen de la Pizza"></div> -->
+
+				<div id="carouselExampleInterval" class="carousel slide col-6 " data-bs-ride="carousel">
+					<!--Carrusel de fotos-->
+					<div class="carousel-inner">
+						<div class="carousel-item active" data-bs-interval="4000">
 							<img src="./imagenes/heladomenu1.png" class="d-block w-100" alt="Helado">
-						  </div>
-						  <div class="carousel-item" data-bs-interval="4000">
-							<img src="./imagenes/ensaladamenu1.png"  class="d-block w-100" alt="Ensalada de frutas">
-						  </div>
-						  <div class="carousel-item" data-bs-interval="4000">
-							<img src="./imagenes/pizzamenu1.png" class="d-block w-100" alt=".Pizza">
-						  </div>
 						</div>
-						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						  <span class="visually-hidden">Previous</span>
-						</button>
-						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-						  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-						  <span class="visually-hidden">Next</span>
-						</button>
+						<div class="carousel-item" data-bs-interval="4000">
+							<img src="./imagenes/ensaladamenu1.png" class="d-block w-100" alt="Ensalada de frutas">
+						</div>
+						<div class="carousel-item" data-bs-interval="4000">
+							<img src="./imagenes/pizzamenu1.png" class="d-block w-100" alt=".Pizza">
+						</div>
 					</div>
-					<div class="flex_container_texto col-6">
-						<p>Somos un lugar dedicado a brindar  experiencias   a niños, jóvenes y adultos a través de nuestros productos.
-						Estamos desde el año 2010 ofreciendo los mejores helados, pizzas y ensaladas de frutas de toda la región.</p>
-						<p>Te invitamos a que vengas a nuestro local o realices tu pedido, ya que ofrecemos servicio de delivery-pickUp.</p>
-						<p class="p">¡Te esperamos!</p>
-					</div>		
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 				</div>
+				<div class="flex_container_texto col-6 mx-3">
+					<p>Somos un lugar dedicado a brindar experiencias a niños, jóvenes y adultos a través
+						de nuestros
+						productos.
+						Estamos desde el año 2010 ofreciendo los mejores helados, pizzas y ensaladas de frutas de toda
+						la región.</p>
+					<p>Te invitamos a que vengas a nuestro local o realices tu pedido, ya que ofrecemos servicio de
+						delivery-pickUp.</p>
+					<p class="p">¡Te esperamos!</p>
+				</div>
+			</div>
 		</section>
 
 	</main>
 
 
-	<footer class="footer">Pie de pagina -->
-		<ul class="footer__lista">
-			<li class="footer__lista__item"><a href="https://www.facebook.com" target="_blank"><img src="./imagenes/facebook.png"></a></li>
-			<li class="footer__lista__item"><a href="https://www.instagram.com" target="_blank"><img src="./imagenes/Instagram.png"></a></li>
-			<li class="footer__lista__item"><a href="https://www.youtube.com" target="_blank"><img src="./imagenes/youtube.png"></a></li>
-		</ul>		
+	<footer class="footer">
+		<!-- <div class=" divfooter mx-auto row-1">
+			<ul class="footer__lista list-inline">
+				<div class="col-4">
+					<li class="footer__lista__item list-inline-item"><a href="https://www.facebook.com"
+							target="_blank"><img src="./imagenes/facebook.png"></a></li>
+				</div>
+				<div class="col-4">
+					<li class="footer__lista__item list-inline-item"><a href="https://www.instagram.com"
+							target="_blank"><img src="./imagenes/Instagram.png"></a></li>
+				</div>
+				<div class="col-4">
+					<li class="list-inline-item"><a href="https://www.youtube.com" target="_blank">
+							<i class="bi bi-youtube"></i>
+						</a></li>
+				</div>
+			</ul>
+		</div> -->
+		<div class=" divfooter mx-auto">
+			<ul class="list-inline fs-2 mt-2">
+				<li class="footeritem list-inline-item">
+					<a href="https://www.facebook.com" target="_blank">
+						<i class="bi bi-facebook"></i>
+					</a>
+				</li>
+				<li class=" footeritem list-inline-item">
+					<a href="https://www.instagram.com" target="_blank">
+						<i class="bi bi-instagram"></i>
+					</a>
+				</li>
+				<li class=" footeritem list-inline-item">
+					<a href="https://www.youtube.com" target="_blank">
+						<i class="bi bi-youtube"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
 	</footer>
 
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
