--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -1,73 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Antojos Pizzeria</title>
     <!--Google fonts-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../style.css"><!-- Link a css -->
-</head>
+    <link rel="stylesheet" href="../style.css"><!-- Link a css -->
+  </head>
 
-<body background="../imagenes/fondo1.jpg">
-    <header class="header"><!-- Encabezado del sitio -->
-          
-          <!-- <section class="header__logo">
-              <a class="header__logo__imagen" href="#">
-                  <img src="../imagenes/encabezado.jpg" alt="Logo del sitio">
-              </a>
-          </section> -->
-          <nav>
-            <div class="container"> <!--NavBar Boostrap-->
-                <a class="navbar-brand" href="#">
-                  <img src="../imagenes/encabezado.jpg" alt="" width="100"  >
-                </a>
-              </div>
-        </nav>
+<body >
+  <header class="header container-fluid"><!-- Encabezado del sitio -->  
+  </header>
   
-          <section class="header__menu">
-              <nav><!--Barra de navegación (Unorder list)-->
-                  <ul class="header__menu__lista">
-                      <li class="header__menu__lista__item"><a href="../index.html">Home</a></li>
-                      <li class="header__menu__lista__item"><a href="./menu.html">Menú</a></li>
-                      <li class="header__menu__lista__item"><a href="./Delivery-retiro.html">Delivery - PickUp</a></li>
-                      <li class="header__menu__lista__item"><a href="./eventos.html">Eventos</a></li>
-                      <li class="header__menu__lista__item"><a href="./contacto.html">Contacto</a></li>
-                  </ul>
-              </nav>
-          </section>
-      </header>
+    <nav>
+      <div class="container">
+        <!--NavBar Boostrap-->
+        <a class="navbar-brand" href="#">
+          <img src="../imagenes/encabezado.jpg" alt="Encabezado" width="100">
+        </a>
+      </div>
+    </nav>
+  
+    <section class="header__menu">
+
+      <nav class="header__menu__lista navbar navbar-expand-lg navbar-light ">
+        <div class="divheader__menu__lista container-fluid d-flex">
+  
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class=" collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav header__menu__lista">
+              <li class="nav-item header__menu__lista__item">
+                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item header__menu__lista__item">
+                <a class="nav-link" href="../paginas/menu.html">Menú</a>
+              </li>
+              <li class="nav-item header__menu__lista__item">
+                <a class="nav-link" href="../paginas/Delivery-retiro.html">Delivery - PickUp</a>
+              </li>
+              <li class="nav-item header__menu__lista__item">
+                <a class="nav-link" href="../paginas/eventos.html">Eventos</a>
+              </li>
+              <li class="nav-item header__menu__lista__item">
+                <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+  
+    </section>
+  
 
     <main class="main"><!-- Contenido del sitio -->
 		
 			<h2>NUESTRO MENÚ</h2>
         <section class="grilla"> <!--Grilla para el menú-->
-            <!-- <div class="grilla__item item1 wide">
-                <img src="../imagenes/pizzamenu1.png" alt="Pizza Peperonni">
-            </div>
-            <div class="grilla__item item2 wide">
-                <img src="../imagenes/pizzamenu2.png" alt="Pizza Hawaiana">
-            </div>
-            <div class="grilla__item item4 wide">
-                <img src="../imagenes/heladomenu1.png" alt="Super Cono">
-            </div>
-            <div class="grilla__item item5 wide">
-                <img src="../imagenes/heladomenu3.png" alt="Helado tradicional">
-            </div>
-            <div class="grilla__item item4 wide">
-                <img src="../imagenes/ensaladamenu1.png" alt="Ensalada sin helado">
-            </div>
-            <div class="grilla__item item5 wide">
-                <img src="../imagenes/ensaladamenu2.png" alt="Ensalada con helado">
-            </div>
-            <div class="grilla__item item5 wide">
-                <img src="../imagenes/ensaladamenu2.png" alt="Ensalada con helado">
-            </div> -->
-
               <div class="card-group">
                 <div class="card bg-warning">
                   <img src="../imagenes/pizzamenu1.png" class="card-img-top" alt="Pizza Peperonni">
@@ -124,12 +122,33 @@
         </section>
 	</main> 
 
-    <footer class="footer"><!-- Pie de pagina -->
-		<ul class="footer__lista">
-			<li class="footer__lista__item"><a href="https://www.facebook.com" target="_blank"><img src="../imagenes/facebook.png"></a></li>
-			<li class="footer__lista__item"><a href="https://www.instagram.com" target="_blank"><img src="../imagenes/instagram.png"></a></li>
-			<li class="footer__lista__item"><a href="https://www.youtube.com" target="_blank"><img src="../imagenes/youtube.png"></a></li>
-		</ul>
+  <footer class="footer">
+		<div class=" divfooter mx-auto">
+			<ul class="list-inline fs-2 mt-2">
+				<li class="footeritem list-inline-item">
+					<a href="https://www.facebook.com" target="_blank">
+						<i class="bi bi-facebook"></i>
+					</a>
+				</li>
+				<li class=" footeritem list-inline-item">
+					<a href="https://www.instagram.com" target="_blank">
+						<i class="bi bi-instagram"></i>
+					</a>
+				</li>
+				<li class=" footeritem list-inline-item">
+					<a href="https://www.youtube.com" target="_blank">
+						<i class="bi bi-youtube"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
 	</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+		crossorigin="anonymous"></script>
 </body>
 </html>
