--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -18,7 +18,7 @@
 <body >
   <header class="header container-fluid"><!-- Encabezado del sitio -->  
   </header>
-  
+
     <nav>
       <div class="container">
         <!--NavBar Boostrap-->
@@ -29,7 +29,6 @@
     </nav>
   
     <section class="header__menu">
-
       <nav class="header__menu__lista navbar navbar-expand-lg navbar-light ">
         <div class="divheader__menu__lista container-fluid d-flex">
   
@@ -58,7 +57,6 @@
           </div>
         </div>
       </nav>
-  
     </section>
   
 
@@ -66,16 +64,16 @@
 		
 			<h2>NUESTRO MENÚ</h2>
         <section class="grilla"> <!--Grilla para el menú-->
-              <div class="card-group">
+              <div class="card-group ">
                 <div class="card bg-warning">
                   <img src="../imagenes/pizzamenu1.png" class="card-img-top" alt="Pizza Peperonni">
-                  <div class="card-body bg-warning">
+                  <div class="card-body bg-warning col-6 mx-3">
                     <h4 class="card-title">Pizza Pepperoni</h4>
                     <p class="card-text">Pepperoni bañada en nuestra salsa extra queso.</p>
                     <p class="card-text">Porción personal, mediana o familiar</p>
                   </div>
                 </div>
-                <div class="card bg-warning">
+                <div class="card bg-warning col-6 mx-3">
                   <img src="../imagenes/pizzamenu2.png" class="card-img-top" alt="Pizza Hawaiana">
                   <div class="card-body bg-warning">
                     <h5 class="card-title">Pizza Hawaiana</h5>
@@ -83,7 +81,7 @@
                     <p class="card-text">Porción personal, mediana o familiar</p>
                   </div>
                 </div>
-                <div class="card bg-warning">
+                <div class="card bg-warning col-6 mx-3">
                   <img src="../imagenes/pizzamenu2.png" class="card-img-top" alt="Pizza Atun">
                   <div class="card-body ">
                     <h5 class="card-title">Pizza Atún</h5>
@@ -93,29 +91,29 @@
                 </div>
               </div>
               <br>
-              <div class="card-group">
-                <div class="card bg-warning">
+            <div class="card-group " >
+                <div class="card bg-warning col-6 mx-3 mb-5">
                   <img src="../imagenes/ensaladamenu1.png" class="card-img-top" alt="Ensalda de frutas">
                   <div class="card-body bg-warning">
-                    <h5 class="card-title">Ensalada de Frutas (Sin helado)</h5>
+                    <h6 class="card-title">Ensalada de Frutas (Sin helado)</h6>
                     <p class="card-text">Frutas, crema chantilline y barquillo</p>
                     <p class="card-text">Porción personal y grande</p>
                   </div>
                 </div>
-                <div class="card bg-warning">
+                <div class="card bg-warning col-6 mx-3 mb-5">
                   <img src="../imagenes/ensaladamenu2.png" class="card-img-top" alt="Ensalda de frutas con helado">
                   <div class="card-body bg-warning">
-                    <h5 class="card-title">Ensalada de frutas (Incluye helado)</h5>
+                    <h6 class="card-title">Ensalada de frutas (Incluye helado)</h6>
                     <p class="card-text">Frutas, queso, crema de la casa acompañada de 2 helados</p>
                     <p class="card-text">Porción personal y grande</p>
                   </div>
                 </div>
-                <div class="card bg-warning">
+                <div class="card bg-warning col-6 mx-3 mb-5">
                   <img src="../imagenes/heladobanana.png" class="card-img-top" alt="Helado Banana">
                   <div class="card-body ">
-                    <h5 class="card-title">BananaSplit</h5>
+                    <h6 class="card-title">BananaSplit</h6>
                     <p class="card-text">Banano, helado, fresas y topin que desees.</p>
-                    <p class="card-text">Porción personal y grande</p>
+                    <p class="card-text ">Porción personal y grande</p>
                   </div>
                 </div>
               </div>
@@ -124,7 +122,7 @@
 
   <footer class="footer">
 		<div class=" divfooter mx-auto">
-			<ul class="list-inline fs-2 mt-2">
+      <ul class="list-inline fs-2 mt-6">
 				<li class="footeritem list-inline-item">
 					<a href="https://www.facebook.com" target="_blank">
 						<i class="bi bi-facebook"></i>
